Add lazy loading to large images

--- a/about.html
+++ b/about.html
@@ -114,7 +114,7 @@
             <div class="container">
                 <h2 id="leadership-title" class="section-title">Our Leadership</h2>
                 <article class="leadership-profile" aria-labelledby="prof-sadek-name">
-                    <img src="images/team/prof-alaa-el-sadek.jpg" alt="Portrait of Prof. Dr. Alaa Abdallah El-Sadek, President, Board of Trustees of AFYS-EWB" class="profile-image">
+                    <img loading="lazy" src="images/team/prof-alaa-el-sadek.jpg" alt="Portrait of Prof. Dr. Alaa Abdallah El-Sadek, President, Board of Trustees of AFYS-EWB" class="profile-image">
                     <h3 id="prof-sadek-name">Prof. Dr. Alaa Abdallah El-Sadek</h3>
                     <h4>President, Board of Trustees</h4>
                     <p>Prof. Dr. El-Sadek is a distinguished figure in water resources management, environmental science, and sustainable development, with extensive experience in fostering international scientific collaboration and empowering youth. Under his visionary guidance, AFYS-EWB continues to expand its impact and drive positive change across the Arab region and beyond.</p>
@@ -155,7 +155,7 @@
                 <div class="footer-col">
                     <h4>AFYS-EWB</h4>
                     <p>Arab Foundation for Young Scientists. A public benefit foundation (No. 760/2014) empowering Arab innovators.</p>
-                    <img src="images/logo-footer.png" alt="AFYS-EWB Logo Inverted" class="footer-logo" style="max-width: 150px; margin-top: 15px; filter: brightness(0) invert(1);">
+                    <img loading="lazy" src="images/logo-footer.png" alt="AFYS-EWB Logo Inverted" class="footer-logo" style="max-width: 150px; margin-top: 15px; filter: brightness(0) invert(1);">
                 </div>
                 <div class="footer-col">
                     <h4>Quick Links</h4>
