--- a/afys-profile.html
+++ b/afys-profile.html
@@ -90,7 +90,7 @@
                 <h2 id="afys-centers-heading" class="section-title">Our Centers of Excellence</h2>
                 <p class="lead-text">AFYS establishes specialized centers to address key challenges and empower specific communities. Our centers act as hubs for training, innovation, and strategic development, directly contributing to Egypt's Vision 2030.</p>
                 <div class="center-highlight-card">
-                    <img src="images/afys/center-for-empowerment-logo.png" alt="Center for Young Scientist Empowerment Logo">
+                    <img loading="lazy" src="images/afys/center-for-empowerment-logo.png" alt="Center for Young Scientist Empowerment Logo">
                     <h3>Center for Young Scientist and Graduate Empowerment</h3>
                     <p>A pivotal initiative designed to bridge the gap between academic skills and labor market demands through targeted training, entrepreneurship support, and strategic partnerships.</p>
                     <a href="center-for-empowerment.html" class="btn btn-primary-orange">Learn More About the Center <i class="fas fa-arrow-right"></i></a>
@@ -125,7 +125,7 @@
          <section class="section-padding bg-light" aria-labelledby="afys-leadership-title">
             <div class="container text-center" style="max-width: 800px;">
                 <h2 id="afys-leadership-title" class="section-title">Foundation Leadership</h2>
-                <img src="images/team/prof-alaa-el-sadek.jpg" alt="Portrait of Prof. Dr. Alaa Abdallah El-Sadek" class="profile-image" style="max-width:200px; margin: 0 auto 1.5rem;">
+                <img loading="lazy" src="images/team/prof-alaa-el-sadek.jpg" alt="Portrait of Prof. Dr. Alaa Abdallah El-Sadek" class="profile-image" style="max-width:200px; margin: 0 auto 1.5rem;">
                 <h3 style="font-size: 1.75rem;">Prof. Dr. Alaa Abdallah El-Sadek</h3>
                 <p class="lead-text" style="color:var(--afys-primary); font-weight: 500;">President, Board of Trustees</p>
                 <p>As the founder of both AFYS and the Egyptian Water Bank, Prof. Dr. El-Sadek provides the visionary leadership that connects scientific potential with strategic implementation. His expertise in water resource management and his passion for empowering youth are the driving forces behind our dual mission.</p>
@@ -138,8 +138,8 @@
         <div class="container">
             <div class="footer-grid">
                 <div class="footer-col footer-logos">
-                    <img src="images/logo-afys-footer.png" alt="AFYS Footer Logo">
-                    <img src="images/logo-ewb-footer.png" alt="EWB Footer Logo">
+                    <img loading="lazy" src="images/logo-afys-footer.png" alt="AFYS Footer Logo">
+                    <img loading="lazy" src="images/logo-ewb-footer.png" alt="EWB Footer Logo">
                     <p>Synergizing science and strategic water management for a sustainable Arab future.</p>
                 </div>
                 <div class="footer-col">
