--- a/center-for-empowerment.html
+++ b/center-for-empowerment.html
@@ -65,7 +65,7 @@
     <main>
         <section class="page-header-simple" style="background: linear-gradient(45deg, hsla(from var(--afys-secondary) h s l / 0.1), hsla(from var(--afys-primary) h s l / 0.1));">
             <div class="container text-center">
-                <img src="images/afys/center-for-empowerment-logo.png" alt="Center for Empowerment Logo" class="center-logo-large">
+                <img loading="lazy" src="images/afys/center-for-empowerment-logo.png" alt="Center for Empowerment Logo" class="center-logo-large">
                 <h1>Center for Young Scientist and Graduate Empowerment for Entrepreneurship and Employment</h1>
                 <p class="lead-text">An AFYS initiative dedicated to aligning graduate skills with market demands, fostering innovation, and driving employment in line with Egypt's Vision 2030.</p>
             </div>
@@ -128,8 +128,8 @@
         <div class="container">
             <div class="footer-grid">
                 <div class="footer-col footer-logos">
-                    <img src="images/logo-afys-footer.png" alt="AFYS Footer Logo">
-                    <img src="images/logo-ewb-footer.png" alt="EWB Footer Logo">
+                    <img loading="lazy" src="images/logo-afys-footer.png" alt="AFYS Footer Logo">
+                    <img loading="lazy" src="images/logo-ewb-footer.png" alt="EWB Footer Logo">
                     <p>Synergizing science and strategic water management for a sustainable Arab future.</p>
                 </div>
                 <div class="footer-col">
