--- a/ewb-interview.html
+++ b/ewb-interview.html
@@ -62,7 +62,7 @@
             <div class="container" style="max-width: 800px;">
                 <header class="article-header interview-header">
                     <div class="interview-author-image">
-                        <img src="images/interview/prof-elsadek-interview.jpg" alt="Prof. Dr. Alaa Abdallah El-Sadek">
+                        <img loading="lazy" src="images/interview/prof-elsadek-interview.jpg" alt="Prof. Dr. Alaa Abdallah El-Sadek">
                     </div>
                     <div class="interview-title-content">
                         <p class="article-kicker">EWB Founder's Perspective</p>
@@ -119,8 +119,8 @@
         <div class="container">
             <div class="footer-grid">
                 <div class="footer-col footer-logos">
-                    <img src="images/logo-afys-footer.png" alt="AFYS Footer Logo">
-                    <img src="images/logo-ewb-footer.png" alt="EWB Footer Logo">
+                    <img loading="lazy" src="images/logo-afys-footer.png" alt="AFYS Footer Logo">
+                    <img loading="lazy" src="images/logo-ewb-footer.png" alt="EWB Footer Logo">
                     <p>Synergizing science and strategic water management for a sustainable Arab future.</p>
                 </div>
                 <div class="footer-col">
