--- a/ewb-profile.html
+++ b/ewb-profile.html
@@ -78,7 +78,7 @@
                     <a href="ewb-interview.html" class="btn btn-primary-blue" style="margin-top:1rem;">Read In-Depth Interview with our Founder <i class="fas fa-arrow-right"></i></a>
                 </div>
                 <div class="vision-mission-image">
-                    <img src="images/ewb/vision-mission.jpg" alt="A pair of hands cupping clean water over a thriving green landscape, symbolizing the EWB's vision and mission.">
+                    <img loading="lazy" src="images/ewb/vision-mission.jpg" alt="A pair of hands cupping clean water over a thriving green landscape, symbolizing the EWB's vision and mission.">
                 </div>
             </div>
         </section>
@@ -87,7 +87,7 @@
             <div class="container">
                 <h2 id="ewb-services-heading" class="section-title">Our Services & Core Activities</h2>
                 <div class="services-banner-full">
-                    <img src="images/ewb/services-overview.jpg" alt="A montage showcasing the diverse services of the Egyptian Water Bank, including desalination, irrigation, and water conservation.">
+                    <img loading="lazy" src="images/ewb/services-overview.jpg" alt="A montage showcasing the diverse services of the Egyptian Water Bank, including desalination, irrigation, and water conservation.">
                 </div>
                 <div class="swot-grid" style="margin-top: 3rem;">
                     <div class="swot-card"><h4><i class="fas fa-tint"></i>Clean Water Access</h4><p>Connecting underserved and water-scarce areas to clean and safe drinking water.</p></div>
@@ -169,7 +169,7 @@
         <section class="section-padding" aria-labelledby="sohag-heading">
              <div class="container two-col-grid reverse-on-mobile">
                 <div class="vision-mission-image">
-                    <img src="images/ewb/sohag-priority-project.jpg" alt="A resident of a Sohag village expressing hope, representing the focus of EWB's priority projects.">
+                    <img loading="lazy" src="images/ewb/sohag-priority-project.jpg" alt="A resident of a Sohag village expressing hope, representing the focus of EWB's priority projects.">
                 </div>
                 <div>
                     <h2 id="sohag-heading">Priority Focus: Sohag Governorate</h2>
@@ -189,8 +189,8 @@
         <div class="container">
             <div class="footer-grid">
                 <div class="footer-col footer-logos">
-                    <img src="images/logo-afys-footer.png" alt="AFYS Footer Logo">
-                    <img src="images/logo-ewb-footer.png" alt="EWB Footer Logo">
+                    <img loading="lazy" src="images/logo-afys-footer.png" alt="AFYS Footer Logo">
+                    <img loading="lazy" src="images/logo-ewb-footer.png" alt="EWB Footer Logo">
                     <p>Synergizing science and strategic water management for a sustainable Arab future.</p>
                 </div>
                 <div class="footer-col">
