--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     <a href="afys-profile.html" class="pathway-card afys-card fade-in">
                         <div class="pathway-card-bg" style="background-image: url('images/pathways/pathway-afys.jpg');"></div>
                         <div class="pathway-content">
-                            <img src="images/logo-afys.png" alt="Arab Foundation for Young Scientists Logo" class="pathway-logo">
+                            <img loading="lazy" src="images/logo-afys.png" alt="Arab Foundation for Young Scientists Logo" class="pathway-logo">
                             <h3>Arab Foundation of Young Scientists</h3>
                             <p>Fostering innovation, scientific research, and entrepreneurship among Arab youth to build a thriving knowledge economy.</p>
                             <span class="btn-pathway">Explore AFYS <i class="fas fa-arrow-right"></i></span>
@@ -88,7 +88,7 @@
                     <a href="ewb-profile.html" class="pathway-card ewb-card fade-in">
                         <div class="pathway-card-bg" style="background-image: url('images/pathways/pathway-ewb.jpg');"></div>
                         <div class="pathway-content">
-                            <img src="images/logo-ewb.png" alt="Egyptian Water Bank Logo" class="pathway-logo">
+                            <img loading="lazy" src="images/logo-ewb.png" alt="Egyptian Water Bank Logo" class="pathway-logo">
                             <h3>Egyptian Water Bank</h3>
                             <p>Ensuring sustainable water management, financing critical water projects, and securing clean water access for all Egyptians.</p>
                              <span class="btn-pathway">Discover EWB <i class="fas fa-arrow-right"></i></span>
@@ -115,8 +115,8 @@
         <div class="container">
             <div class="footer-grid">
                 <div class="footer-col footer-logos">
-                    <img src="images/logo-afys-footer.png" alt="AFYS Footer Logo">
-                    <img src="images/logo-ewb-footer.png" alt="EWB Footer Logo">
+                    <img loading="lazy" src="images/logo-afys-footer.png" alt="AFYS Footer Logo">
+                    <img loading="lazy" src="images/logo-ewb-footer.png" alt="EWB Footer Logo">
                     <p>Synergizing science and strategic water management for a sustainable Arab future.</p>
                 </div>
                 <div class="footer-col">
