--- a/initiatives.html
+++ b/initiatives.html
@@ -78,27 +78,27 @@
                     <h3 id="category-sustainable-dev" class="category-title"><i class="fas fa-cogs icon-left" aria-hidden="true"></i>Sustainable Development & Infrastructure</h3>
                     <div class="initiative-cards-container">
                         <article class="initiative-card">
-                            <img src="images/initiatives/water-desalination-project.jpg" alt="Modern water desalination plant with clean water output.">
+                            <img loading="lazy" src="images/initiatives/water-desalination-project.jpg" alt="Modern water desalination plant with clean water output.">
                             <h4>Water Security Solutions</h4>
                             <p>Manufacturing and production of advanced membranes for water desalination and treatment. Spearheading the Egyptian Water Bank initiative to ensure sustainable access to clean water (SDG 6).</p>
                         </article>
                         <article class="initiative-card">
-                            <img src="images/initiatives/solar-cell-production.jpg" alt="Automated production line for high-efficiency solar cells.">
+                            <img loading="lazy" src="images/initiatives/solar-cell-production.jpg" alt="Automated production line for high-efficiency solar cells.">
                             <h4>Renewable Energy Technologies</h4>
                             <p>Establishing facilities for the manufacturing and production of solar cells. Leading efforts to advance Green Hydrogen industries in Egypt for domestic use and regional export.</p>
                         </article>
                         <article class="initiative-card">
-                            <img src="images/initiatives/smart-irrigation-systems.jpg" alt="Smart irrigation system watering crops efficiently in a field.">
+                            <img loading="lazy" src="images/initiatives/smart-irrigation-systems.jpg" alt="Smart irrigation system watering crops efficiently in a field.">
                             <h4>Modern & Smart Irrigation</h4>
                             <p>Production of modern and smart irrigation supplies and systems to optimize water use in agriculture. Implementing large-scale projects like the 1000 feddans initiative with Reef El Masry El Gadeed.</p>
                         </article>
                         <article class="initiative-card">
-                            <img src="images/initiatives/supply-chain-logistics.jpg" alt="Graphic illustrating efficient supply chain and strategic goods storage.">
+                            <img loading="lazy" src="images/initiatives/supply-chain-logistics.jpg" alt="Graphic illustrating efficient supply chain and strategic goods storage.">
                             <h4>Strategic Supply Chains & Storage</h4>
                             <p>Developing resilient and efficient supply chain and storage systems for strategic goods, ensuring quality, availability, and reducing post-harvest losses.</p>
                         </article>
                          <article class="initiative-card">
-                            <img src="images/initiatives/agricultural-export-farming.jpg" alt="High-quality agricultural products being packaged for export.">
+                            <img loading="lazy" src="images/initiatives/agricultural-export-farming.jpg" alt="High-quality agricultural products being packaged for export.">
                             <h4>Agricultural Export & Modern Farming</h4>
                             <p>Establishing the Young Scientists Company for processing and exporting high-value agricultural products and producing innovative modern irrigation supplies.</p>
                         </article>
@@ -109,22 +109,22 @@
                     <h3 id="category-environmental-stewardship" class="category-title"><i class="fas fa-leaf icon-left" aria-hidden="true"></i>Environmental Stewardship & Climate Action</h3>
                     <div class="initiative-cards-container">
                         <article class="initiative-card">
-                            <img src="images/initiatives/environmental-knowledge-center.jpg" alt="Center for environmental research with scientists at work.">
+                            <img loading="lazy" src="images/initiatives/environmental-knowledge-center.jpg" alt="Center for environmental research with scientists at work.">
                             <h4>Environmental Knowledge Economy Center</h4>
                             <p>Finding innovative solutions in biodiversity conservation, climate change mitigation & adaptation, protected area management, ecotourism, sustainable waste management, and pollution control. Promoting environmental entrepreneurship among youth.</p>
                         </article>
                         <article class="initiative-card">
-                            <img src="images/initiatives/e-waste-management.jpg" alt="Facility for responsible e-waste recycling and processing.">
+                            <img loading="lazy" src="images/initiatives/e-waste-management.jpg" alt="Facility for responsible e-waste recycling and processing.">
                             <h4>E-Waste Management Initiative</h4>
                             <p>Launched in collaboration with Egyptian universities and industry partners to establish a comprehensive framework for tackling electronic waste challenges through awareness, collection, and recycling.</p>
                         </article>
                         <article class="initiative-card">
-                            <img src="images/initiatives/nile-river-cleanup.jpg" alt="Volunteers participating in a Nile River cleanup drive.">
+                            <img loading="lazy" src="images/initiatives/nile-river-cleanup.jpg" alt="Volunteers participating in a Nile River cleanup drive.">
                             <h4>Nile River Environmental Cleanup</h4>
                             <p>A collaborative, community-driven initiative with partners like Telecom Egypt to organize regular campaigns for collecting and managing waste from the Nile River and its banks.</p>
                         </article>
                          <article class="initiative-card">
-                            <img src="images/initiatives/community-sdg-projects.jpg" alt="Community members benefiting from a sustainable development project focusing on SDGs.">
+                            <img loading="lazy" src="images/initiatives/community-sdg-projects.jpg" alt="Community members benefiting from a sustainable development project focusing on SDGs.">
                             <h4>Community SDG Projects</h4>
                             <p>Active participation in and leadership of sustainable development projects that directly benefit local communities, implemented in collaboration with the Ministry of Environment and other stakeholders.</p>
                         </article>
@@ -135,22 +135,22 @@
                     <h3 id="category-innovation-research" class="category-title"><i class="fas fa-rocket icon-left" aria-hidden="true"></i>Innovation, Research & Entrepreneurship</h3>
                     <div class="initiative-cards-container">
                         <article class="initiative-card">
-                            <img src="images/initiatives/business-incubator-hub.jpg" alt="Modern co-working space for startups within the AFYS-EWB business incubator.">
+                            <img loading="lazy" src="images/initiatives/business-incubator-hub.jpg" alt="Modern co-working space for startups within the AFYS-EWB business incubator.">
                             <h4>AFYS-EWB Business Incubator</h4>
                             <p>Applying scientific research and cutting-edge innovation to foster a vibrant knowledge economy and support the growth of technology-driven startups. Includes a specialized incubator for engineering projects with the Agricultural Bank and Engineers Syndicate.</p>
                         </article>
                         <article class="initiative-card">
-                            <img src="images/initiatives/technology-innovation-center.jpg" alt="Advanced technology being developed at an AFYS-EWB innovation center.">
+                            <img loading="lazy" src="images/initiatives/technology-innovation-center.jpg" alt="Advanced technology being developed at an AFYS-EWB innovation center.">
                             <h4>Technology Innovation Centers</h4>
                             <p>Establishing centers of excellence focusing on handicrafts, heritage crafts, and textile industries (with Helwan University), and a dedicated center for AI and IoT applications in various sectors (with AASTMT).</p>
                         </article>
                         <article class="initiative-card">
-                            <img src="images/initiatives/scientific-research-platform.jpg" alt="Digital interface of the AFYS-EWB scientific research and innovation platform.">
+                            <img loading="lazy" src="images/initiatives/scientific-research-platform.jpg" alt="Digital interface of the AFYS-EWB scientific research and innovation platform.">
                             <h4>Scientific Research & Innovation Platform</h4>
                             <p>Establishing a collaborative online platform in partnership with Misr El Kheir Foundation to promote cross-disciplinary research, facilitate knowledge sharing, and connect innovators with resources.</p>
                         </article>
                         <article class="initiative-card">
-                            <img src="images/initiatives/innovation-exhibition.jpg" alt="Young scientists presenting their innovations at an AFYS-EWB exhibition.">
+                            <img loading="lazy" src="images/initiatives/innovation-exhibition.jpg" alt="Young scientists presenting their innovations at an AFYS-EWB exhibition.">
                             <h4>Innovation & Knowledge Economy Exhibitions</h4>
                             <p>Organizing regular exhibitions and forums to showcase impactful scientific research and innovations from young Arab scientists that contribute to sustainable development and economic growth.</p>
                         </article>
@@ -161,7 +161,7 @@
                     <h3 id="category-specialized-econ" class="category-title"><i class="fas fa-spa icon-left" aria-hidden="true"></i>Specialized Economic Development</h3>
                     <div class="initiative-cards-container">
                         <article class="initiative-card">
-                            <img src="images/initiatives/therapeutic-tourism-egypt.jpg" alt="Scenic view of a natural therapeutic tourism site in Egypt, like mineral springs or unique sand dunes.">
+                            <img loading="lazy" src="images/initiatives/therapeutic-tourism-egypt.jpg" alt="Scenic view of a natural therapeutic tourism site in Egypt, like mineral springs or unique sand dunes.">
                             <h4>Therapeutic Tourism Strategy</h4>
                             <p>Developing and promoting Egypt's vast potential in therapeutic tourism, leveraging its unique natural assets like mineral waters, therapeutic sand, and specialized resorts for health, wellness, and economic diversification.</p>
                         </article>
@@ -172,17 +172,17 @@
                     <h3 id="category-policy-institutional" class="category-title"><i class="fas fa-landmark icon-left" aria-hidden="true"></i>Policy and Institutional Development</h3>
                     <div class="initiative-cards-container">
                         <article class="initiative-card">
-                             <img src="images/initiatives/young-scientists-university.jpg" alt="Architectural rendering or blueprint for the proposed Young Scientists University.">
+                             <img loading="lazy" src="images/initiatives/young-scientists-university.jpg" alt="Architectural rendering or blueprint for the proposed Young Scientists University.">
                             <h4>Young Scientists University Project</h4>
                             <p>Initiating procedures and securing resources, including land acquisition, for the ambitious establishment of the Young Scientists University, a unique institution dedicated to fostering future scientific leaders.</p>
                         </article>
                         <article class="initiative-card">
-                            <img src="images/initiatives/afys-ewb-headquarters.jpg" alt="The modern, well-equipped headquarters of AFYS-EWB at Ain Shams University.">
+                            <img loading="lazy" src="images/initiatives/afys-ewb-headquarters.jpg" alt="The modern, well-equipped headquarters of AFYS-EWB at Ain Shams University.">
                             <h4>Foundation Headquarters</h4>
                             <p>Establishing and operating a fully equipped, state-of-the-art headquarters for AFYS-EWB, hosted at Ain Shams University, to serve as a central hub for activities, collaboration, and knowledge-economy company creation.</p>
                         </article>
                          <article class="initiative-card">
-                            <img src="images/initiatives/arab-knowledge-economy-company.jpg" alt="Logo or symbolic representation of the Arab Knowledge Economy Company.">
+                            <img loading="lazy" src="images/initiatives/arab-knowledge-economy-company.jpg" alt="Logo or symbolic representation of the Arab Knowledge Economy Company.">
                             <h4>"Arab Knowledge Economy Company"</h4>
                             <p>Founding a dedicated company to manage and drive the foundation's diverse portfolio of projects, with an estimated future project value exceeding EGP 100 million, aimed at tangible economic impact.</p>
                         </article>
@@ -201,7 +201,7 @@
                 <div class="footer-col">
                     <h4>AFYS-EWB</h4>
                     <p>Arab Foundation for Young Scientists. A public benefit foundation (No. 760/2014) empowering Arab innovators.</p>
-                    <img src="images/logo-footer.png" alt="AFYS-EWB Logo Inverted" class="footer-logo" style="max-width: 150px; margin-top: 15px; filter: brightness(0) invert(1);">
+                    <img loading="lazy" src="images/logo-footer.png" alt="AFYS-EWB Logo Inverted" class="footer-logo" style="max-width: 150px; margin-top: 15px; filter: brightness(0) invert(1);">
                 </div>
                 <div class="footer-col">
                     <h4>Quick Links</h4>
