--- a/news.html
+++ b/news.html
@@ -76,7 +76,7 @@
                 <!-- News Item 1 -->
                 <article class="news-list-item" id="news-item-1" aria-labelledby="news-title-1">
                     <div class="news-list-item-image">
-                        <img src="images/news/green-hydrogen-initiative.jpg" alt="Scientists working on green hydrogen technology development.">
+                        <img loading="lazy" src="images/news/green-hydrogen-initiative.jpg" alt="Scientists working on green hydrogen technology development.">
                     </div>
                     <div class="news-list-item-content">
                         <span class="news-list-item-date">October 26, 2023</span>
@@ -90,7 +90,7 @@
                 <!-- News Item 2 -->
                 <article class="news-list-item" id="news-item-2" aria-labelledby="news-title-2">
                     <div class="news-list-item-image">
-                        <img src="images/news/scientific-leaders-workshop.jpg" alt="Group photo of participants at the Young Scientific Leaders workshop.">
+                        <img loading="lazy" src="images/news/scientific-leaders-workshop.jpg" alt="Group photo of participants at the Young Scientific Leaders workshop.">
                     </div>
                     <div class="news-list-item-content">
                         <span class="news-list-item-date">September 15, 2023</span>
@@ -103,7 +103,7 @@
                 <!-- Event Item 1 -->
                 <article class="news-list-item event-item" id="event-item-1" aria-labelledby="event-title-1">
                     <div class="news-list-item-image">
-                        <img src="images/news/annual-forum-sdgs.jpg" alt="Promotional banner for the Annual Forum for Young Arab Scientists on Innovations for SDGs.">
+                        <img loading="lazy" src="images/news/annual-forum-sdgs.jpg" alt="Promotional banner for the Annual Forum for Young Arab Scientists on Innovations for SDGs.">
                     </div>
                     <div class="news-list-item-content">
                         <span class="news-list-item-date event-date"><i class="fas fa-calendar-alt" aria-hidden="true"></i> EVENT: November 10-12, 2023</span>
@@ -118,7 +118,7 @@
                 <!-- News Item 3 - Archive Example -->
                  <article class="news-list-item" id="news-item-archive-1" aria-labelledby="news-title-archive-1">
                     <div class="news-list-item-image">
-                        <img src="images/news/societal-responsibility-conference.jpg" alt="Panel discussion at the Conference on Societal Responsibility & Sustainable Development.">
+                        <img loading="lazy" src="images/news/societal-responsibility-conference.jpg" alt="Panel discussion at the Conference on Societal Responsibility & Sustainable Development.">
                     </div>
                     <div class="news-list-item-content">
                         <span class="news-list-item-date">Archive: May 5, 2023</span>
@@ -140,7 +140,7 @@
                 <div class="footer-col">
                     <h4>AFYS-EWB</h4>
                     <p>Arab Foundation for Young Scientists. A public benefit foundation (No. 760/2014) empowering Arab innovators.</p>
-                    <img src="images/logo-footer.png" alt="AFYS-EWB Logo Inverted" class="footer-logo" style="max-width: 150px; margin-top: 15px; filter: brightness(0) invert(1);">
+                    <img loading="lazy" src="images/logo-footer.png" alt="AFYS-EWB Logo Inverted" class="footer-logo" style="max-width: 150px; margin-top: 15px; filter: brightness(0) invert(1);">
                 </div>
                 <div class="footer-col">
                     <h4>Quick Links</h4>
