--- a/partnerships.html
+++ b/partnerships.html
@@ -75,67 +75,67 @@
                 <div class="partner-logos-flex-container">
                     <div class="partner-logo-item">
                         <a href="https://www.asu.edu.eg/english/" target="_blank" rel="noopener noreferrer" title="Ain Shams University">
-                            <img src="images/partners/ain-shams-university-logo.png" alt="Ain Shams University Official Logo">
+                            <img loading="lazy" src="images/partners/ain-shams-university-logo.png" alt="Ain Shams University Official Logo">
                         </a>
                     </div>
                     <div class="partner-logo-item">
                         <a href="http://nigsd.gov.eg/en/" target="_blank" rel="noopener noreferrer" title="National Institute for Governance and Sustainable Development">
-                            <img src="images/partners/nigsd-logo.png" alt="National Institute for Governance and Sustainable Development (NIGSD) Logo">
+                            <img loading="lazy" src="images/partners/nigsd-logo.png" alt="National Institute for Governance and Sustainable Development (NIGSD) Logo">
                         </a>
                     </div>
                     <div class="partner-logo-item">
                         <a href="https://www.misrelkheir.org/en/" target="_blank" rel="noopener noreferrer" title="Misr El Kheir Foundation">
-                            <img src="images/partners/misr-el-kheir-logo.png" alt="Misr El Kheir Foundation Logo">
+                            <img loading="lazy" src="images/partners/misr-el-kheir-logo.png" alt="Misr El Kheir Foundation Logo">
                         </a>
                     </div>
                     <div class="partner-logo-item">
                         <a href="http://www.eeaa.gov.eg/en-us/" target="_blank" rel="noopener noreferrer" title="Ministry of Environment (EEAA)">
-                            <img src="images/partners/ministry-environment-egypt-logo.png" alt="Egyptian Ministry of Environment (EEAA) Logo">
+                            <img loading="lazy" src="images/partners/ministry-environment-egypt-logo.png" alt="Egyptian Ministry of Environment (EEAA) Logo">
                         </a>
                     </div>
                     <div class="partner-logo-item">
                         <a href="http://www.helwan.edu.eg/english/" target="_blank" rel="noopener noreferrer" title="Helwan University">
-                            <img src="images/partners/helwan-university-logo.png" alt="Helwan University Official Logo">
+                            <img loading="lazy" src="images/partners/helwan-university-logo.png" alt="Helwan University Official Logo">
                         </a>
                     </div>
                      <div class="partner-logo-item">
                         <a href="https://technology4smes.unescwa.org/" target="_blank" rel="noopener noreferrer" title="ESCWA Technology Centre">
-                            <img src="images/partners/escwa-tech-centre-logo.png" alt="ESCWA Technology Centre Logo">
+                            <img loading="lazy" src="images/partners/escwa-tech-centre-logo.png" alt="ESCWA Technology Centre Logo">
                         </a>
                     </div>
                     <div class="partner-logo-item">
                         <a href="https://www.akdn.org/our-agencies/aga-khan-foundation" target="_blank" rel="noopener noreferrer" title="Aga Khan Foundation">
-                            <img src="images/partners/aga-khan-foundation-logo.png" alt="Aga Khan Foundation Logo">
+                            <img loading="lazy" src="images/partners/aga-khan-foundation-logo.png" alt="Aga Khan Foundation Logo">
                         </a>
                     </div>
                     <div class="partner-logo-item">
                         <a href="https://www.abe.com.eg/english" target="_blank" rel="noopener noreferrer" title="Agricultural Bank of Egypt">
-                            <img src="images/partners/agricultural-bank-egypt-logo.png" alt="Agricultural Bank of Egypt Logo">
+                            <img loading="lazy" src="images/partners/agricultural-bank-egypt-logo.png" alt="Agricultural Bank of Egypt Logo">
                         </a>
                     </div>
                      <div class="partner-logo-item">
                         <a href="https://eea.org.eg/" target="_blank" rel="noopener noreferrer" title="Egyptian Engineers Syndicate">
-                            <img src="images/partners/engineers-syndicate-egypt-logo.png" alt="Egyptian Engineers Syndicate Logo">
+                            <img loading="lazy" src="images/partners/engineers-syndicate-egypt-logo.png" alt="Egyptian Engineers Syndicate Logo">
                         </a>
                     </div>
                     <div class="partner-logo-item">
                         <a href="https://aast.edu/" target="_blank" rel="noopener noreferrer" title="Arab Academy for Science, Technology & Maritime Transport (AASTMT)">
-                            <img src="images/partners/aastmt-logo.png" alt="Arab Academy for Science, Technology & Maritime Transport (AASTMT) Logo">
+                            <img loading="lazy" src="images/partners/aastmt-logo.png" alt="Arab Academy for Science, Technology & Maritime Transport (AASTMT) Logo">
                         </a>
                     </div>
                      <div class="partner-logo-item">
                         <a href="https://te.eg/wps/portal/te/Personal" target="_blank" rel="noopener noreferrer" title="Telecom Egypt">
-                            <img src="images/partners/telecom-egypt-logo.png" alt="Telecom Egypt Logo">
+                            <img loading="lazy" src="images/partners/telecom-egypt-logo.png" alt="Telecom Egypt Logo">
                         </a>
                     </div>
                      <div class="partner-logo-item">
                         <a href="https://cu.edu.eg/Home" target="_blank" rel="noopener noreferrer" title="Cairo University">
-                            <img src="images/partners/cairo-university-nanotech-logo.png" alt="Cairo University Logo">
+                            <img loading="lazy" src="images/partners/cairo-university-nanotech-logo.png" alt="Cairo University Logo">
                         </a>
                     </div>
                     <div class="partner-logo-item">
                         <a href="https://nu.edu.eg/" target="_blank" rel="noopener noreferrer" title="Nile University">
-                            <img src="images/partners/nile-university-logo.png" alt="Nile University Logo">
+                            <img loading="lazy" src="images/partners/nile-university-logo.png" alt="Nile University Logo">
                         </a>
                     </div>
                 </div>
@@ -166,8 +166,8 @@
         <div class="container">
             <div class="footer-grid">
                 <div class="footer-col footer-logos">
-                    <img src="images/logo-afys-footer.png" alt="AFYS Footer Logo">
-                    <img src="images/logo-ewb-footer.png" alt="EWB Footer Logo">
+                    <img loading="lazy" src="images/logo-afys-footer.png" alt="AFYS Footer Logo">
+                    <img loading="lazy" src="images/logo-ewb-footer.png" alt="EWB Footer Logo">
                     <p>Synergizing science and strategic water management for a sustainable Arab future.</p>
                 </div>
                 <div class="footer-col">
