--- a/programs.html
+++ b/programs.html
@@ -123,32 +123,32 @@
                     <p>AFYS-EWB is committed to continuous learning and professional development through a variety of targeted programs, workshops, and capacity-building initiatives designed to enhance skills and foster leadership among young scientists and professionals.</p>
                     <div class="program-cards-container">
                         <article class="program-card">
-                            <img src="images/programs/young-scientific-leaders.jpg" alt="Young scientific leaders engaged in a collaborative workshop session.">
+                            <img loading="lazy" src="images/programs/young-scientific-leaders.jpg" alt="Young scientific leaders engaged in a collaborative workshop session.">
                             <h5>"Young Scientific Leaders" Program</h5>
                             <p>A flagship program in collaboration with the National Institute for Governance and Sustainable Development (NIGSD) and Ain Shams University, empowering future leaders in science and policy.</p>
                         </article>
                         <article class="program-card">
-                             <img src="images/programs/sdg-workshops.jpg" alt="Participants actively discussing Sustainable Development Goals in a workshop.">
+                             <img loading="lazy" src="images/programs/sdg-workshops.jpg" alt="Participants actively discussing Sustainable Development Goals in a workshop.">
                             <h5>Sustainable Development Workshops</h5>
                             <p>A comprehensive series of interactive workshops covering the 17 SDGs, with a special focus on critical interlinkages of Water, Energy, Food, and Environment in the Arab world context.</p>
                         </article>
                         <article class="program-card">
-                             <img src="images/programs/arab-science-ambassadors.jpg" alt="Diverse group of Arab Science Ambassadors during a training module.">
+                             <img loading="lazy" src="images/programs/arab-science-ambassadors.jpg" alt="Diverse group of Arab Science Ambassadors during a training module.">
                             <h5>"Arab Science Ambassadors" Program</h5>
                             <p>An intensive capacity-building initiative designed to cultivate skills in scientific diplomacy, effective communication, and international collaboration among promising young Arab scientists.</p>
                         </article>
                         <article class="program-card">
-                            <img src="images/programs/curricula-development.jpg" alt="Team of educators and scientists collaborating on developing sustainable development curricula.">
+                            <img loading="lazy" src="images/programs/curricula-development.jpg" alt="Team of educators and scientists collaborating on developing sustainable development curricula.">
                             <h5>Sustainable Development Curricula</h5>
                             <p>Developing and disseminating innovative teaching methodologies and curricula on sustainability for technical schools and university students. Includes specialized courses on Water, Energy, Food, and Environment for secondary stage young scientists.</p>
                         </article>
                          <article class="program-card">
-                            <img src="images/programs/vocational-training-aswan.jpg" alt="Students engaged in hands-on learning at a vocational training center in Aswan.">
+                            <img loading="lazy" src="images/programs/vocational-training-aswan.jpg" alt="Students engaged in hands-on learning at a vocational training center in Aswan.">
                             <h5>Vocational Training Centers</h5>
                             <p>Developing and managing state-of-the-art vocational training centers, such as the facility in Aswan established in collaboration with the Aga Khan Foundation, focusing on market-relevant skills.</p>
                         </article>
                          <article class="program-card">
-                             <img src="images/programs/conference-content-creation.jpg" alt="Speaker delivering a presentation at an AFYS-EWB conference on sustainable development.">
+                             <img loading="lazy" src="images/programs/conference-content-creation.jpg" alt="Speaker delivering a presentation at an AFYS-EWB conference on sustainable development.">
                             <h5>Scientific Content for Conferences</h5>
                             <p>Expertise in developing high-quality, impactful scientific content and agendas for foundation-led conferences focusing on corporate social responsibility, sustainable development, and science communication.</p>
                         </article>
@@ -165,7 +165,7 @@
                 <div class="footer-col">
                     <h4>AFYS-EWB</h4>
                     <p>Arab Foundation for Young Scientists. A public benefit foundation (No. 760/2014) empowering Arab innovators.</p>
-                    <img src="images/logo-footer.png" alt="AFYS-EWB Logo Inverted" class="footer-logo" style="max-width: 150px; margin-top: 15px; filter: brightness(0) invert(1);">
+                    <img loading="lazy" src="images/logo-footer.png" alt="AFYS-EWB Logo Inverted" class="footer-logo" style="max-width: 150px; margin-top: 15px; filter: brightness(0) invert(1);">
                 </div>
                 <div class="footer-col">
                     <h4>Quick Links</h4>
